2006-09-06  Ralf Angeli  <angeli@caeruleus.net>

	* doc/auctex.texi (Mathematics): Align description of
	`LaTeX-math-list' with reality.

2006-08-25  David Kastrup  <dak@gnu.org>

	* doc/preview-faq.texi (Requirements, Installation Trouble)
	(Customization): Update and remove stuff, mostly because
	preview-latex is integrated with AUCTeX now.

2006-08-30  Ralf Angeli  <angeli@caeruleus.net>

	* latex.el (TeX-latex-mode): Check if `tool-bar-mode' is bound.

	* tex.el (TeX-plain-tex-mode): Check if `tool-bar-mode' is bound.

2006-08-26  Ralf Angeli  <angeli@caeruleus.net>

	* doc/auctex.texi (European): Make replacement of
	language-specific hyphen strings more obvious.

2006-08-25  Ralf Angeli  <angeli@caeruleus.net>

	* style/csquotes.el: Bring up to par with version 3.5.

2006-08-17  David Kastrup  <dak@gnu.org>

	* doc/auctex.texi (Viewing): Type fix.

2006-08-05  Berend de Boer  <berend@pobox.com>

	* context-en.el: quite a few more English ConTeXt macros made
	available in menu.

	* context-nl.el: few more Dutch ConTeXt macros made available in menu.

	* context.el: more ConTeXt macros made available in menu.

2006-08-02  Reiner Steib  <Reiner.Steib@gmx.de>

	* tex-bar.el (TeX-bar-TeX-button-alist, TeX-bar-LaTeX-button-alist):
	Make `file' invisible in TeX-PDF-mode.  Add clean.
	(TeX-bar-TeX-buttons, TeX-bar-LaTeX-buttons): Improve custom type.

2006-07-27  Reiner Steib  <Reiner.Steib@gmx.de>

	* tex-bar.el (TeX-bar-TeX-buttons, TeX-bar-LaTeX-buttons): Improve
	wording.

	* doc/changes.texi: Add bug fixes.  Add TeX tool bar.

	* doc/auctex.texi (Running TeX and friends): Add
	TeX-enable-toolbar.

	* tex-bar.el: Copy of tool bar stuff from LaTeX-*.
	(TeX-bar-TeX-buttons, TeX-bar-TeX-all-button-alists)
	(TeX-bar-TeX-button-alist): New variables.
	(TeX-bar-TeX-buttons, TeX-install-toolbar): New funtions.
	(TeX-tool-bar-button-definitions): New custom group

	* tex.el (TeX-enable-toolbar): New variable.
	(TeX-maybe-install-toolbar): New function.