@@ -1,3 +1,8 @@
+2006-09-08  David Kastrup  <dak@gnu.org>
+
+	* latex.el: Allow strings for keys in LaTeX-math-mode.
+	(LaTeX-math-list): Allow string for key.
+
 2006-09-06  Ralf Angeli  <angeli@caeruleus.net>
 
 	* doc/auctex.texi (Mathematics): Align description of
